k8s/lrs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: lrs
  name: lrs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: lrs
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/public: "true"
        io.kompose.service: lrs
    spec:
      containers:
        - image: devagastya0/lrs:latest
          name: docker-lrs
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
          resources: {}
      restartPolicy: Always
status: {}
