k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  tls:
    - hosts:
      - adl-lrs.ddns.net
      secretName: tls-secret
  rules:
    - host: adl-lrs.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: nginx
                port:
                  number: 80
