k8s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cert-manager
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    cert-manager.io/cluster-issuer: letsencrypt-prod\
spec:
  tls:
  - hosts:
    - <domain>
    secretName: tls-secret-prd
  rules:
  - host: <domain>
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 443
        path: /
